--- a/src/gameserver.ini
+++ b/src/gameserver.ini
@@ -51,7 +51,7 @@ serverIpLimit = 0
 serverMinionIgnoreTime = 30
 serverMinionThreshold = 10
 serverMinionInterval = 1000
-serverPort = 1111
+serverPort = 3000
 serverBind = "0.0.0.0"
 serverTracker = 1
 serverGamemode = 0
@@ -129,7 +129,7 @@ playerDecayRate = .002
 playerRecombineTime = 30
 playerMaxNickLength = 15
 playerDisconnectTime = 30
-#playerProtection = 0
+playerProtection = 30
 
 # [Gamemode]
 # Custom gamemode settings
