--- a/src/gameserver_default.ini
+++ b/src/gameserver_default.ini
@@ -1,4 +1,4 @@
-# MultiOgar configurations file
+﻿# MultiOgar configurations file
 # Lines starting with number sign (#) are comments
 
 # [NOTE]
@@ -51,7 +51,7 @@ serverIpLimit = 0
 serverMinionIgnoreTime = 30
 serverMinionThreshold = 10
 serverMinionInterval = 1000
-serverPort = 1111
+serverPort = 3000
 serverBind = "0.0.0.0"
 serverTracker = 1
 serverGamemode = 0
@@ -60,7 +60,7 @@ serverViewBaseX = 1920
 serverViewBaseY = 1080
 serverMinScale = 0.15
 serverSpectatorScale = 0.3
-serverStatsPort = 8888
+serverStatsPort = -88
 serverStatsUpdate = 5
 serverScrambleLevel = 0
 serverMaxLB = 10
@@ -129,7 +129,7 @@ playerDecayRate = .002
 playerRecombineTime = 30
 playerMaxNickLength = 15
 playerDisconnectTime = 30
-#playerProtection = 0
+playerProtection = 1
 
 # [Gamemode]
 # Custom gamemode settings
